modified css to reposition the checkboxes.

--- a/chinese-ime/ime.css
+++ b/chinese-ime/ime.css
@@ -2,7 +2,8 @@
 .chinese-checkbox {
   color: #666;
   font-size: 14px;
-  padding: 5px; }
+  padding: 5px;
+  float: left; }
 
 #chinese-ime {
   font-family: Arial, Sans-serif;
