--- a/css/style.css
+++ b/css/style.css
@@ -35,22 +35,6 @@
 
 .has-spinner.active .spinner {
   opacity: 1;
-  max-width: 50px; /* This doesn't work, just fix for unkown width elements */
-}
-
-.has-spinner.btn-mini.active .spinner {
-    width: 10px;
-}
-
-.has-spinner.btn-small.active .spinner {
-    width: 13px;
-}
-
-.has-spinner.btn.active .spinner {
-    width: 16px;
-}
-
-.has-spinner.btn-large.active .spinner {
-    width: 19px;
+  max-width: 50px;
 }
 
